--- a/src/employeeservice/build.gradle
+++ b/src/employeeservice/build.gradle
@@ -6,7 +6,6 @@ plugins {
 
 group = 'com.example'
 version = '1.0'
-sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
@@ -20,6 +19,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.8'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.8'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.7.8'
+
+	implementation 'org.apache.logging.log4j:log4j-core:2.10.0'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
 }
