--- a/src/employeeservice/build.gradle
+++ b/src/employeeservice/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 	implementation 'org.apache.logging.log4j:log4j-core:2.10.0'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 
+	implementation 'io.micrometer:micrometer-registry-prometheus:latest.release'
+
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
 }
 
