--- a/src/organizationservice/build.gradle
+++ b/src/organizationservice/build.gradle
@@ -6,7 +6,6 @@ plugins {
 
 group = 'com.example'
 version = '1.0'
-sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
@@ -20,6 +19,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.8'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.8'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.7.8'
+	implementation 'io.micrometer:micrometer-registry-prometheus:latest.release'
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.5'
 	implementation 'org.springframework.cloud:spring-cloud-dependencies:2021.0.3'
